added a service still not working

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
       <script src="./js/app.js"></script>
 <script src="./js/controllers/shoppingCtrl.js"></script>
+<script src="./js/services/shoppingSrvc.js"></script>
 
   </body>
 </html>
