--- a/index.html
+++ b/index.html
@@ -6,60 +6,33 @@
     <meta charset="utf-8">
     <title></title>
 
-
+ <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 
       <ui-view></ui-view>
 
 
 </head>
 <body class="home homeFont">
-  <div ng-controller="shoppingCtrl">
-          <h2>Products Line</h2>
-          <table ng-show="products.length > 0">
-              <div ng-repeat="product in products">
-                  <div>
-                      {{product.name}}
-                  </td>
-                  <td>
-                      {{product.price}}
-                  </td>
-                  <td>
-                      <button ng-click="addCartItem(product)" ></button>
-                  </div>
-              </div>
-          </table>
+  <div ng-controller="mainCtrl">
 
-          <h2>Shopping cart</h2>
-              <table ng-show="cartItems.length > 0">
-              <tr>
-                  <th>Name</th>
-                  <th>Price</th>
-                  <th>Quantity</th>
-              </tr>
-              <tr ng-repeat="item in cartItems">
-                  <td>
-                      {{item.name}}
-                  </td>
-                  <td>
-                      {{item.price}}
-                  </td>
-                  <td>
-                      {{item.quantity}}
-                  </td>
-              </tr>
-              <tr>
-                  <td>
-                      {{ cartSum() }}
-                  </td>
-              </tr>
-          </table>
+      <h1>Plenty O' Ceasar Stuff.com</h1>
+
+      <div ng-repeat="product in products">
+        <div ng-click="addToCart(product)">
+          <h1>Name: {{product.name}}</h1>
+          <p>Price: {{product.price | currency}}</p>
+        </div>
       </div>
-
-
+      <h1>Cart</h1>
+      <ul ng-repeat="product in cart">
+        <li>Name: {{product.name}}</li>
+      </ul>
+    <button ng-click="getCart()"></button>
 
       <script src="./js/app.js"></script>
-<script src="./js/controllers/shoppingCtrl.js"></script>
-<script src="./js/services/shoppingSrvc.js"></script>
+        <script src="node_modules/angular/angular.js"></script>
+<script src="./js/controllers/mainCtrl.js"></script>
+<script src="./js/services/cartService.js"></script>
 
   </body>
 </html>
