--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p>Price: {{product.price | currency}}</p>
         </div>
       </div>
-      <h1>Cart</h1>
+      <h1>DayCart</h1>
       <ul ng-repeat="product in cart">
         <li>Name: {{product.name}}</li>
       </ul>
